version/0.65/_sources/examples/extended_examples/index.rst.txt
.. _ref_extended_examples:

Extended examples
=================

These extended examples explain other concepts such as interoperability
with other programs, libraries, and features in development.

+----------------------------+---------------------------------------------------------------------------------------------------------+
| **Name**                   | **Description**                                                                                         |
+----------------------------+---------------------------------------------------------------------------------------------------------+
| `Cart-Pole Simulation`_    | Demonstrates a reinforcement machine learning example using MAPDL through PyMAPDL.                      |
+----------------------------+---------------------------------------------------------------------------------------------------------+
| :ref:`extended_example01`  | Demonstrates the interoperability between PyMAPDL and the `gmsh <gmsh_>`_ meshing library.              |
+----------------------------+---------------------------------------------------------------------------------------------------------+
| :ref:`python_upf_examples` | Demonstrates the interoperability between user-programmable functions in MAPDL and Python.              |
+----------------------------+---------------------------------------------------------------------------------------------------------+
| :ref:`krylov_example`      | Demonstrates the usage of the Krylov method for solving a customized harmonic analysis.                 |
+----------------------------+---------------------------------------------------------------------------------------------------------+
| :ref:`dash_example`        | Demonstrates the use of PyMAPDL with Dash.                                                              |
+----------------------------+---------------------------------------------------------------------------------------------------------+
| :ref:`executable_example`  | Create your own Python app with a command-line interface.                                               |
+----------------------------+---------------------------------------------------------------------------------------------------------+


.. _Cart-Pole Simulation: cartpole_example_notebook_

.. toctree::
    :hidden:
    :maxdepth: 2

    Cart-Pole Simulation <http://cartpole.mapdl.docs.pyansys.com/ml-rl-notebook.html>
    ex_01-gmsh_example/ex_01-gmsh_example.rst
    Python_UPF/python_upf_examples.rst
    Krylov/krylov_example.rst
    dash/dash_example.rst
    executable/executable.rst
